--- a/ASP.NET MVC Core/ServiceForSendingMessages/ServiceForSendingMessages.csproj
+++ b/ASP.NET MVC Core/ServiceForSendingMessages/ServiceForSendingMessages.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
 </Project>
